<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:id="@+id/hello"
		android:gravity="center"
        android:text="@string/hello" />
	
	<TextView 
		android:id="@+id/output"
		android:text="@string/defaulttext"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_margin="15dp"
		android:gravity="center" />
	
	<EditText
		android:id="@+id/input"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_margin="20dp"
		android:gravity="bottom" />
	<Button
		android:id="@+id/convert"
		android:text="@string/convert"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_margin="30dp"
		android:gravity="center" />
	<Button
		android:id="@+id/showAlphabet"
		android:text="@string/showAlphabet"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_margin="30dp"
		android:gravity="center" />
	<Button
		android:id="@+id/changeLangage"
		android:text="@string/changeLangage"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_margin="30dp"
		android:gravity="center" />
</LinearLayout>
</ScrollView>
